tests/fixtures/invalid/pow_bytes_int_none.py
# Cannot call pow() with Bytes, Int, None
x = pow(b"hello", 1, None)
